--- a/less/type.less
+++ b/less/type.less
@@ -71,15 +71,15 @@ h1,
 h2,
 h3 { line-height: @baseLineHeight * 2; }
 
-h1 { font-size: @baseFontSize * 2.75; } // ~38px
-h2 { font-size: @baseFontSize * 2.25; } // ~32px
-h3 { font-size: @baseFontSize * 1.75; } // ~24px
-h4 { font-size: @baseFontSize * 1.25; } // ~18px
+h1 { font-size: @baseFontSize * 2.2; } //
+h2 { font-size: @baseFontSize * 1.7; } //
+h3 { font-size: @baseFontSize * 1.5; } //
+h4 { font-size: @baseFontSize * 1.2; } //
 h5 { font-size: @baseFontSize; }
-h6 { font-size: @baseFontSize * 0.85; } // ~12px
+h6 { font-size: @baseFontSize * 0.8; } //
 
-h1 small { font-size: @baseFontSize * 1.75; } // ~24px
-h2 small { font-size: @baseFontSize * 1.25; } // ~18px
+h1 small { font-size: @baseFontSize * 1.5; } //
+h2 small { font-size: @baseFontSize * 1.2; } //
 h3 small { font-size: @baseFontSize; }
 h4 small { font-size: @baseFontSize; }
 
